--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="sytext">
                         <p>Hİ, I am Şeyma YILMAZ, a professional frontend developer. With a passion for web technologies and skills in creating user-friendly, aesthetic web applications, I strive to complete my projects to the highest standards. In the future,
                             I aim to participate in more innovative projects and further enhance my knowledge and skills in web technologies.</p>
-                        <a href="img/sy_cv.pdf" target="_blank" download class="btn btn-resume">View Resume</a>
+                        <a href="img/sy__cv.pdf" target="_blank" download class="btn btn-resume">View Resume</a>
                         <a href="img/seymayilmaz_thesis.pdf" target="_blank" class="btn btn-resume">View My Thesis</a>
                     </div>
                 </div>
